src/test/ui/suggestions/fn-needing-specified-return-type-param.rs
fn f<A>() -> A { unimplemented!() }
fn foo() {
    let _ = f; //~ ERROR type annotations needed for `fn() -> A`
}
fn main() {}
